# pdfmagic

./: .gitignore  1.html  2.html  3.html  4.html  README.md  pdfsquash.py  setup.cfg
