[metadata]
name = pdfsquash
version = 0.0.3
author = Mike Kroutikov
author_email = pgmmpk@gmail.com
url = https://github.com/pgmmpk/pdfsquash
description = Tool(s) for placing multiple PDF pages on a sheet for printin
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pdf
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = pdfsquash
zip_safe = True
include_package_data = True
install_requires =
    pypdf2~=3.0.1

[options.entry_points]
console_scripts = 
    pdfsquash = pdfsquash:main

# [options.package_data]
# example = data/schema.json, *.txt
# * = README.md
